<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/runningbac"
    android:orientation="vertical"
    tools:context=".RunningFragment">

    <ImageView
        android:id="@+id/avatarIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:src="@drawable/ic_default_img_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />


    <TextView
        android:id="@+id/nameTv"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/count_fore_leftTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/count_fore_rightTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/count_mid_leftTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:id="@+id/count_mid_rightTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:id="@+id/count_heel_leftTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/count_heel_rightTv"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="0 times"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/arch_type_leftTv"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Neutral"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/arch_type_rightTv"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Neutral"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="205dp"
        android:layout_height="26dp"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <ToggleButton
        android:id="@+id/start_stopBtn"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:background="@drawable/round_bg"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <Button
        android:id="@+id/edit_profileBtn"
        android:layout_width="84dp"
        android:layout_height="19dp"
        android:background="@drawable/round_bg"
        android:text="@string/edit_profile"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>